# CraneIoT

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
crane_simulation/: __init__.py  mvp_server.py  nmea_server.py  sensors.py
src/crane_simulation/: __init__.py  config.toml  crane_simulation.py  main.py  mb_server_sim.py  mvp_server.py  nmea_server_sim.py  sensors.py
tests/: test_sensors.py
