# pyproject.toml

[build-system]
requires = ["setuptools>=68.2.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Crane-IoT-Simulator"
version = "0.0.2"
requires-python = ">=3.11"
authors = [
    {name = "Tim Bischoff", email = "tim.bischoff@macgregor.com"}
]
maintainers = [
    {name = "Tim Bischoff", email = "tim.bischoff@macgregor.com"}
]
description = "Simulation of NMEA ROT sensor data & Modbus TCP Temperature Data"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.11",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Repository = "https://github.com/ChiquiTi2/CraneIoT"

[project.scripts]

[tool.pytest.ini_options]
minversion = "7.4.3"
addopts = "-rA -vv --cov=src/pyhvc --cov-report html --cov-append --cov-branch"
testpaths = [
    "tests",
    ]